--- a/FirstWebsite.css
+++ b/FirstWebsite.css
@@ -3,3 +3,19 @@ html{
 font-family: 'IBM Plex Mono', monospace;
 font-family: 'Montserrat', sans-serif;
 }
+
+.grid-container {
+    background: #eee;
+    max-width: 900px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-columns: 300px 300px 300px;
+}
+
+.grid-container >div {
+    background: #ccc;
+    text-align:center;
+    padding: 20px;
+    border: 1px solid #777;
+  
+}
