--- a/FirstWebsite.css
+++ b/FirstWebsite.css
@@ -4,4 +4,17 @@ font-family: 'IBM Plex Mono', monospace;
 font-family: 'Montserrat', sans-serif;
 }
 
+#heading{
+    background: antiquewhite;
+    max-width: 90%;
+    margin: 0 auto;
+    display: flex;
+}
 
+#h1{
+    background: rgb(206, 231, 183);
+    max-width: 90%;
+    max-height: 100;
+    margin: 0 auto;
+    display: flex;
+}
