--- a/FirstWebsite.css
+++ b/FirstWebsite.css
@@ -14,7 +14,47 @@ font-family: 'Montserrat', sans-serif;
 #h1{
     background: rgb(206, 231, 183);
     max-width: 90%;
-    max-height: 100;
+    height: 100%;
     margin: 0 auto;
     display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#h2{
+    background: rgb(233, 153, 193);
+    max-width: 90%;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#graphic{
+    background: rgb(252, 252, 252);
+    max-width: 90%;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#foto{
+    background: rgb(252, 252, 252);
+    max-width: 90%;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    /* justify-content: center;
+    align-items: center; */
+}
+#foto1{
+    background: rgb(177, 233, 233);
+    /* justify-content: center;
+    align-items: center; */
+}
+
+#foto2{
+    background: rgb(240, 170, 240);
+    justify-content: center;
+    align-items: center;
 }
