--- a/FirstWebsite.css
+++ b/FirstWebsite.css
@@ -1,5 +1,5 @@
-html{
-    font-size: 62%;
+body{
+    font-size: 18px;
 font-family: 'IBM Plex Mono', monospace;
 font-family: 'Montserrat', sans-serif;
 }
