--- a/FirstWebsite.css
+++ b/FirstWebsite.css
@@ -1,60 +1,68 @@
-body{
-    font-size: 18px;
-font-family: 'IBM Plex Mono', monospace;
-font-family: 'Montserrat', sans-serif;
+body {
+  font-size: 18px;
+  font-family: "IBM Plex Mono", monospace;
+  font-family: "Montserrat", sans-serif;
 }
 
-.heading{
-    background: antiquewhite;
-    max-width: 90%;
-    margin: 0 auto;
-    display: flex;
+.heading {
+  background: antiquewhite;
+  max-width: 90%;
+  margin: 0 auto;
+  display: flex;
 }
 
-.h1{
-    background: rgb(206, 231, 183);
-    max-width: 90%;
-    height: 100%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
+.h1 {
+  background: rgb(206, 231, 183);
+  max-width: 90%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.h2 {
+  background: rgb(233, 153, 193);
+  max-width: 90%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.graphic {
+  background: rgb(252, 252, 252);
+  max-width: 90%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  /* justify-content: center;
+    align-items: center; */
+}
+.foto {
+  background: rgb(252, 252, 252);
+  max-width: 90%;
+  height: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
     align-items: center;
 }
-.h2{
-    background: rgb(233, 153, 193);
-    max-width: 90%;
-    height: 100%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
+.foto1 {
+  background: rgb(177, 233, 233);
+  justify-content: center;
     align-items: center;
 }
-.graphic{
-    background: rgb(252, 252, 252);
-    max-width: 90%;
-    height: 100%;
-    margin: 0 auto;
-    display: flex;
-    /* justify-content: center;
-    align-items: center; */
-}
-.foto{
-    background: rgb(252, 252, 252);
-    max-width: 90%;
-    height: 100%;
-    margin: 0 auto;
-    display: flex;
-    /* justify-content: center;
-    align-items: center; */
-}
-.foto1{
-    background: rgb(177, 233, 233);
-    /* justify-content: center;
-    align-items: center; */
-}
 
-.siabadaba{
-opacity:0;
-transition:.3s;
-
+.siabadaba {
+  display: flex;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0;
+  transition: 0.3s;
+}
+.foto2:hover .siabadaba {
+  opacity: 1;
 }
