--- a/FirstWebsite.css
+++ b/FirstWebsite.css
@@ -30,13 +30,13 @@ body {
   align-items: center;
 }
 .graphic {
-  background: rgb(252, 252, 252);
+  background: rgb(136, 214, 219);
   max-width: 90%;
-  height: 100%;
+  height: 30%;
   margin: 0 auto;
   display: flex;
-  /* justify-content: center;
-    align-items: center; */
+  justify-content: center;
+  align-items: center;
 }
 
 .foto .description{
@@ -64,6 +64,6 @@ body {
 	position: relative;
 }
 
-.foto .cell:hover .description {
+.foto .cell:hover  {
   opacity: 1;
 }
