--- a/FirstWebsite.css
+++ b/FirstWebsite.css
@@ -74,4 +74,36 @@ body {
   display: flex!important 
   
 }
+#con{
+
+  max-width: 90%;
+  height: 30%;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+  display: none
+}
+
+.interested {
+  background: rgb(233, 153, 193);
+  width: 100%;
+  height: 90%;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+}
+.email {
+  background: rgb(136, 214, 219);
+  width: 100%;
+  height: 30%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.something{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
