--- a/FirstWebsite.css
+++ b/FirstWebsite.css
@@ -17,10 +17,13 @@ header {
   background: rgb(206, 231, 183);
 }
 #about {
-  background: rgb(228, 174, 201);
+  background: rgb(233, 153, 193);
 }
 #graphics {
-  background: rgb(112, 206, 212);
+  background: rgb(136, 214, 219);
+}
+.sentence{
+  background: rgb(65, 168, 175);
 }
 
 .gallery .description{
@@ -65,6 +68,9 @@ header {
 
 .work{
   background: rgb(206, 231, 183);
+}
+.touch{
+  background: rgb(92, 119, 67);
 }
 
 
