--- a/FirstWebsite.css
+++ b/FirstWebsite.css
@@ -25,20 +25,20 @@ header {
 }
 
 #about-me {
-  background: rgb(183, 231, 213);  
-  font-size: 18px;
+  background: rgb(183, 231, 213); 
 }
 #about {
   background: rgba(107, 192, 207, 0.849);
-  font-size: 18px;
 }
 #graphics {
   background: rgb(14, 166, 177);
-  font-size: 18px;
 }
 .sentence{
   background: rgb(65, 168, 175);
-  font-size: 18px;
+}
+#ourwork{
+	background: rgba(150, 245, 205, 0.568);
+	padding:12rem 0;
 }
 
 .gallery .description{
@@ -60,7 +60,6 @@ header {
 	width: 100%;
 	height: 500px;
 	/* object-fit: cover; */
-    font-size: 18px;
 }
 
 .gallery .cell{
@@ -77,21 +76,12 @@ header {
 
 .interested {
   background: #6b92b3;
-  font-size: 18px;
 }
 .email {
   background: rgb(136, 214, 219);
-  font-size: 18px;
-}
-
-.work{
-  background: rgba(150, 245, 205, 0.568);
-  font-size: 18px;
-  padding:12rem 0;
 }
 .touch{
   background: rgba(135, 202, 204, 0.589);
-  font-size: 18px;
 }
 
 
