--- a/FirstWebsite.css
+++ b/FirstWebsite.css
@@ -19,6 +19,9 @@ h1,h2,h3,h4,h5,h6,
 .h1{
 	font-size: 64px;
 }
+.h7{
+  font-size: 24px;
+}
 header {
   background: rgb(215, 240, 250);
   padding: 1rem 0;
