--- a/FirstWebsite.css
+++ b/FirstWebsite.css
@@ -7,6 +7,7 @@ html{
 body {
   font-size: 18px;
   font-family: "Montserrat";
+  
 }
 
 
@@ -14,6 +15,7 @@ h1,h2,h3,h4,h5,h6,
 .h1,.h2,.h3,.h4,.h5,.h6{
 	font-family: "Montserrat";
 	text-transform: uppercase;
+  
 }
 
 .h1{
@@ -29,6 +31,7 @@ header {
 
 #about-me {
   background: rgb(183, 231, 213); 
+
 }
 #about {
   background: rgba(107, 192, 207, 0.849);
@@ -61,8 +64,11 @@ header {
 
 .gallery img{
 	width: 100%;
-	height: 500px;
-	/* object-fit: cover; */
+	height: 100%;
+	object-fit: cover;
+  filter: saturate(.5) blur(4px);
+  /* transform:scale(1.2); */
+
 }
 
 .gallery .cell{
@@ -71,6 +77,7 @@ header {
 
 .gallery .cell:hover .description{
   opacity: 1;
+
 }
 
 /* #contact{
