--- a/FirstWebsite.css
+++ b/FirstWebsite.css
@@ -66,13 +66,18 @@ header {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-  filter: saturate(.5) blur(4px);
-  /* transform:scale(1.2); */
+  	filter: saturate(.5);
+	transition: 1.5s;
+}
 
+.gallery .cell:hover img{
+	filter: saturate(.5) blur(4px);
+	transform:scale(1.2);
 }
 
 .gallery .cell{
 	position: relative;
+	overflow: hidden;
 }
 
 .gallery .cell:hover .description{
