--- a/FirstWebsite.css
+++ b/FirstWebsite.css
@@ -1,37 +1,49 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap");
 
-html{
-	scroll-behavior: smooth;
+html {
+  scroll-behavior: smooth;
 }
 
 body {
   font-size: 18px;
   font-family: "Montserrat";
-  
 }
 
-
-h1,h2,h3,h4,h5,h6,
-.h1,.h2,.h3,.h4,.h5,.h6{
-	font-family: "Montserrat";
-	text-transform: uppercase;
-  
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.h1,
+.h2,
+.h3,
+.h4,
+.h5,
+.h6 {
+  font-family: "Montserrat";
+  text-transform: uppercase;
 }
 
-.h1{
-	font-size: 64px;
+.h1 {
+  font-size: 64px;
 }
-.h7{
+.h7 {
   font-size: 24px;
 }
 header {
   background: rgb(215, 240, 250);
   padding: 1rem 0;
+  font-size: 24px;
 }
+header a:hover span{
+	color:transparent;
+	background: -webkit-linear-gradient(45deg, red, blue);
+	-webkit-background-clip: text;
+  }
 
 #about-me {
-  background: rgb(183, 231, 213); 
-
+  background: rgb(183, 231, 213);
 }
 #about {
   background: rgba(107, 192, 207, 0.849);
@@ -39,16 +51,16 @@ header {
 #graphics {
   background: rgb(14, 166, 177);
 }
-.sentence{
+.sentence {
   background: rgb(65, 168, 175);
 }
-#ourwork{
-	background: rgba(150, 245, 205, 0.568);
-	padding:12rem 0;
+#ourwork {
+  background: rgba(150, 245, 205, 0.568);
+  padding: 12rem 0;
 }
 
-.gallery .description{
-  background: rgba(127, 255, 212,.8);
+.gallery .description {
+  background: rgba(127, 255, 212, 0.8);
   display: flex;
   position: absolute;
   top: 0;
@@ -62,27 +74,26 @@ header {
   padding: 6rem;
 }
 
-.gallery img{
-	width: 100%;
-	height: 100%;
-	object-fit: cover;
-  	filter: saturate(.5);
-	transition: 1.5s;
+.gallery img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: saturate(0.5);
+  transition: 1.5s;
 }
 
-.gallery .cell:hover img{
-	filter: saturate(.5) blur(4px);
-	transform:scale(1.2);
+.gallery .cell:hover img {
+  filter: saturate(0.5) blur(4px);
+  transform: scale(1.2);
 }
 
-.gallery .cell{
-	position: relative;
-	overflow: hidden;
+.gallery .cell {
+  position: relative;
+  overflow: hidden;
 }
 
-.gallery .cell:hover .description{
+.gallery .cell:hover .description {
   opacity: 1;
-
 }
 
 /* #contact{
@@ -95,17 +106,16 @@ header {
 .email {
   background: rgb(136, 214, 219);
 }
-.touch{
+.touch {
   background: rgba(135, 202, 204, 0.589);
 }
 
-
 /* Wszystkie elementy które mają atrybut id są ukrywane */
-[id]{
-	display: none;
+[id] {
+  display: none;
 }
 
 /* Wywołany element ma ustawić się jako blok czyli jak w linku jest #about to id="about" dostanie display:block */
-:target{
-	display: block;
+:target {
+  display: block;
 }
