--- a/FirstWebsite.css
+++ b/FirstWebsite.css
@@ -120,3 +120,20 @@ header a:hover span{
 :target {
   display: block;
 }
+/* #contact{
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+padding: 10px;
+gap: 10px;
+isolation: isolate;
+
+position: absolute;
+width: 1280px;
+height: 460px;
+left: 0px;
+top: 64px;
+
+background: linear-gradient(96.03deg, #5FC69C 0%, #D7F0FA 100%);
+} */
