--- a/FirstWebsite.css
+++ b/FirstWebsite.css
@@ -55,7 +55,7 @@ header a span{
   background: rgb(14, 166, 177);
 }
 .sentence {
-  background: rgb(215, 240, 250);
+  background: rgb(228, 228, 228);
 }
 #ourwork {
   background: linear-gradient(96.03deg, #5FC69C 0%, #D7F0FA 100%);
@@ -107,7 +107,7 @@ header a span{
   background: linear-gradient(96.03deg, #5FC69C 0%, #D7F0FA 100%);
 }
 .email {
-  background: rgba(128, 176, 238, 0.637);
+  background: linear-gradient(96.03deg, #5FC69C 0%, #D7F0FA 100%);
 }
 .touch {
   background: rgb(228, 228, 228);
