--- a/FirstWebsite.css
+++ b/FirstWebsite.css
@@ -22,8 +22,8 @@ h6,
 .h5,
 .h6 {
   font-family: "Montserrat";
-  text-transform: uppercase;
-  color: black;
+  /* text-transform: uppercase; */
+ 
 }
 
 .h1 {
@@ -41,8 +41,9 @@ header {
 }
 header a span{
 	color: rgba(255, 255, 255, 1);
-	background: -webkit-linear-gradient(45deg, red, blue);
-	-webkit-background-clip: text;
+ 
+	/* background: -webkit-linear-gradient(45deg, red, blue);
+	-webkit-background-clip: text; */
   }
 
 #about-me {
@@ -51,11 +52,13 @@ header a span{
 #about {
   background: linear-gradient(96.03deg, #5FC69C 0%, #D7F0FA 100%);
 }
-#graphics {
-  background: rgb(14, 166, 177);
+.graphics {
+  background: linear-gradient(96.03deg, #5FC69C 0%, #D7F0FA 100%);
+  font-size: 16px;
+  color: black;
 }
 .sentence {
-  background: rgb(228, 228, 228);
+background: rgb(228, 228, 228);
 }
 #ourwork {
   background: linear-gradient(96.03deg, #5FC69C 0%, #D7F0FA 100%);
@@ -126,3 +129,6 @@ header a span{
   display: block;
 }
 
+.gradient{
+  background: linear-gradient(96.03deg, #5FC69C 0%, #D7F0FA 100%);
+}
