--- a/FirstWebsite.css
+++ b/FirstWebsite.css
@@ -34,6 +34,11 @@ h6,
   font-size: 24px;
   color: black;
 }
+.h2 {
+  font-size: 34px;
+  color: black;
+}
+
 header {
   background:  #222222;
   padding: 1rem 0;
