--- a/FirstWebsite.css
+++ b/FirstWebsite.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200&display=swap");
 
+/* DEFAULT STYLES */
 html {
   scroll-behavior: smooth;
 }
@@ -7,133 +8,70 @@ html {
 body {
   font-size: 18px;
   font-family: "Montserrat";
+  background: #eee;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
+h1,h2,h3,h4,h5,h6,
+.h1,.h2,.h3,.h4,.h5,.h6{
   font-family: "Montserrat";
-  /* text-transform: uppercase; */
- 
-}
-
-.h1 {
-  font-size: 64px;
-  color: black;
-}
-.h7 {
-  font-size: 24px;
-  color: black;
-}
-.h2 {
-  font-size: 34px;
   color: black;
 }
 
+
+/* WEBSITE STYLES */
 header {
-  background:  #222222;
-  padding: 1rem 0;
-  font-size: 24px;
-}
-header a span{
-	color: rgba(255, 255, 255, 1);
- 
-	/* background: -webkit-linear-gradient(45deg, red, blue);
-	-webkit-background-clip: text; */
-  }
-
-#about-me {
-  background: linear-gradient(96.03deg, #5FC69C 0%, #D7F0FA 100%);
-}
-#about {
-  background: linear-gradient(96.03deg, #5FC69C 0%, #D7F0FA 100%);
-}
-.graphics {
-  background: linear-gradient(96.03deg, #5FC69C 0%, #D7F0FA 100%);
-  font-size: 16px;
-  color: black;
-}
-.sentence {
-background: rgb(228, 228, 228);
-}
-#ourwork {
-  background: linear-gradient(96.03deg, #5FC69C 0%, #D7F0FA 100%);
-  padding: 12rem 0;
+	padding: .5rem 0;
+	background:  #222222;
+	font-size: 24px;
 }
 
-.gallery .description {
-  background: rgba(127, 255, 212, 0.8);
-  display: flex;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  opacity: 0;
-  transition: 0.3s;
-  justify-content: center;
-  align-items: center;
-  padding: 6rem;
+header a{
+	color: #fff;
+	text-transform: uppercase;
+	background: -webkit-linear-gradient(-45deg, #3E96B9, #65CF96);
+	-webkit-background-clip: text;
+
+	transition: .3s;
 }
 
-.gallery img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  filter: saturate(0.5);
-  transition: 1.5s;
+header a:hover{
+	color:transparent;
 }
 
-.gallery .cell:hover img {
-  filter: saturate(0.5) blur(4px);
-  transform: scale(1.2);
+.logo{
+	color:#fff;
+	font-size: 32px;
+	text-transform: none;
 }
 
-.gallery .cell {
-  position: relative;
-  overflow: hidden;
+.logo span{
+	color:transparent;
+  	background: -webkit-linear-gradient(-45deg, #3E96B9 0%, #65CF96 100%);
+  	-webkit-background-clip: text;
 }
 
-.gallery .cell:hover .description {
-  opacity: 1;
+/* ABOUT SECTION */
+#about{
+	padding: 12rem 0;
+	background: -webkit-linear-gradient(-45deg,#5FC69C,#D7F0FA);
+	font-size: 24px;
 }
 
-/* #contact{
-
-} */
-
-.interested {
-  background: linear-gradient(96.03deg, #5FC69C 0%, #D7F0FA 100%);
-}
-.email {
-  background: linear-gradient(96.03deg, #5FC69C 0%, #D7F0FA 100%);
-}
-.touch {
-  background: rgb(228, 228, 228);
-}
-.frame{
-  background:rgba(255, 255, 255, 1)
+#about .logo{
+	font-size: 48px;
 }
 
-/* Wszystkie elementy które mają atrybut id są ukrywane */
-[id] {
-  display: none;
+/* SENTENCE SECTION */
+.sentence .grid-container{
+	font-size: 32px;
+	margin-top: 2.5rem;
+	margin-bottom: 2.5rem;
+	background: #fff;
+	padding:2rem;
+	box-shadow: 0 8px 16px rgba(0,0,0,.08);
 }
 
-/* Wywołany element ma ustawić się jako blok czyli jak w linku jest #about to id="about" dostanie display:block */
-:target {
-  display: block;
-}
-
-.gradient{
-  background: linear-gradient(96.03deg, #5FC69C 0%, #D7F0FA 100%);
+.icons{
+	font-size: 32px;
+	padding-bottom: 6rem;
 }
