--- a/FirstWebsite.css
+++ b/FirstWebsite.css
@@ -19,7 +19,7 @@ h1,h2,h3,h4,h5,h6,
 
 
 /* WEBSITE STYLES */
-header {
+header, footer {
 	padding: .5rem 0;
 	background:  #222222;
 	font-size: 24px;
@@ -75,3 +75,45 @@ header a:hover{
 	font-size: 32px;
 	padding-bottom: 6rem;
 }
+.h7{
+	font-size: 52px;
+}
+.grid-container{
+	grid-gap:500px;
+}
+.gallery .description {
+	background: rgba(127, 255, 212, 0.8);
+	display: flex;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	opacity: 0;
+	transition: 0.3s;
+	justify-content: center;
+	align-items: center;
+	padding: 6rem;
+  }
+  
+  .gallery img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	filter: saturate(0.5);
+	transition: 1.5s;
+  }
+  
+  .gallery .cell:hover img {
+	filter: saturate(0.5) blur(4px);
+	transform: scale(1.2);
+  }
+  
+  .gallery .cell {
+	position: relative;
+	overflow: hidden;
+  }
+  
+  .gallery .cell:hover .description {
+	opacity: 1;
+  }
